Fixed links in the navbar

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
 	<div class="collapse navbar-collapse" id="navbar" ng-controller="HeaderController">
 		<ul class="nav navbar-nav navbar-right">
-			<li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>
-			<li ng-class="{ active: isActive('/newcard')}"><a href="/newcard">New Card</a></li>
-			<li ng-class="{ active: isActive('/testcard')}"><a href="/testcard">Test yourself</a></li>
+			<li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
+			<li ng-class="{ active: isActive('/newcard')}"><a href="#/newcard">New Card</a></li>
+			<li ng-class="{ active: isActive('/testcard')}"><a href="#/testcard">Test yourself</a></li>
 		</ul>
 	</div>
         </div>
