--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
 <html ng-app="app">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="design/style.css">
-</head>
-<body>
+	<head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+		<link rel="stylesheet" href="design/style.css">
+	</head>
+	<body>
 
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">FlashCard24</a>
-            </div>
-	<div class="collapse navbar-collapse" id="navbar" ng-controller="HeaderController">
-		<ul class="nav navbar-nav navbar-right">
-			<li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>
-			<li ng-class="{ active: isActive('/newcard')}"><a href="#/newcard">New Card</a></li>
-			<li ng-class="{ active: isActive('/testcard')}"><a href="#/testcard">Test yourself</a></li>
-		</ul>
-	</div>
-        </div>
-    </nav>
+	    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	        <div class="container">
+	            <div class="navbar-header">
+	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	                <a class="navbar-brand" href="index.html#/">FlashCard24</a>
+	            </div>
+				<div class="collapse navbar-collapse" id="navbar" ng-controller="HeaderController">
+					<ul class="nav navbar-nav navbar-right">
+						<li ng-class="{ active: isActive('/newcard')}"><a href="#/newcard">New Card</a></li>
+						<li ng-class="{ active: isActive('/testcard')}"><a href="#/testcard">Test yourself</a></li>
+					</ul>
+				</div>
+	        </div>
+	    </nav>
 
-	<div id="container" ng-view></div>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		<div id="container" class="container" ng-view></div>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-	<script type="text/javascript" src="script/app.js"></script>
-</body>
+		<script type="text/javascript" src="script/app.js"></script>
+	</body>
 </html>
